| Summary: | ASTERISK-27088: res_rtp_asterisk: Better handle ICE renegotiation and unidirectional negotiation | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2017-06-28 09:02:31 | Date Closed: | 2017-07-17 07:24:53 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When re-inviting to add more streams it is possible for the role of existing ICE sessions to be changed to the incorrect value. This results in subsequent refreshes within the sessions getting a role conflict and the ICE session breaking down.
As well if we encounter a situation where a unidirectional ICE negotiation happens and the other side does not send us candidates we will not store any information for sending traffic, even though we know where they are reachable. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2018-02-23 08:14:36.650-0600 Change 8262 merged by Jenkins2: res_rtp_asterisk: Fix ICE candidate nomination [https://gerrit.asterisk.org/8262|https://gerrit.asterisk.org/8262] By: Friendly Automation (friendly-automation) 2018-02-23 08:21:52.650-0600 Change 8264 merged by Jenkins2: res_rtp_asterisk: Fix ICE candidate nomination [https://gerrit.asterisk.org/8264|https://gerrit.asterisk.org/8264] By: Friendly Automation (friendly-automation) 2018-02-23 08:28:21.881-0600 Change 8265 merged by George Joseph: res_rtp_asterisk: Fix ICE candidate nomination [https://gerrit.asterisk.org/8265|https://gerrit.asterisk.org/8265] | ||